@@ -16,6 +16,8 @@ the CVS logs is updated daily at the following URL:
 Version 4.99 (CVS HEAD)
 -----------------------
 
+ - [SLD] : when reading an SLD, sequence of classes was reversed (Bug 1925)
+
  - Fixed a bug with SDE capability requests where we were double 
    freeing because sde->row_id_column wasn't set to NULL in msSDELayerOpen
 
